# advent-of-code

./: .gitignore  README.md
01-day/: Santa.cpp
02-day/: Present.cpp  Present.h  Ribbon.cpp  WrappingPaper.cpp
03-day/: 03-day.cpp  Block.h
06-day/: Command.cpp  LightGrid.cpp  Worker.h
2015/: README.md
2015/01-day/: 01-day.cpp  Santa.h
2015/02-day/: 02-day.cpp  Ribbon.h  WrappingPaper.h
2015/03-day/: Block.cpp  Santa.cpp  Santa.h
2015/04-day/: 04-day.cpp
2015/05-day/: 05-day.cpp
2015/06-day/: 06-day.cpp  Command.h  ControllableLightGrid.cpp  ControllableLightGrid.h  LightGrid.h  Worker.cpp
2016/: 2016.sln  README.md
2016/d01/: Direction.h  Heading.cpp  Heading.h  d01.cpp  d01.vcxproj  d01.vcxproj.filters
2016/d02/: Direction.h  d02.cpp  d02.vcxproj  d02.vcxproj.filters
2016/d03/: d03.cpp  d03.vcxproj  d03.vcxproj.filters
2016/d04/: d04.cpp  d04.vcxproj  d04.vcxproj.filters
2017/: .gitignore  README.md
2017/D01/: D01.sln
2017/D01/D01-1/: D01-1.vcxproj  main.cpp
2017/D01/D01-2/: D01-2.vcxproj  main.cpp
2017/D02/: D02.sln
2017/D02/D02-1/: D02-1.vcxproj  main.cpp
2017/D02/D02-2/: D02-2.vcxproj  main.cpp
2017/D03/: D03.sln  input.txt
2017/D03/D03-1/: D03-1.vcxproj  main.cpp
2017/D03/D03-2/: D03-2.vcxproj  main.cpp
2017/D04/: D04.sln
2017/D04/D04-1/: D04-1.vcxproj  main.cpp
2017/D04/D04-2/: D04-2.vcxproj  main.cpp
2017/D05/: D05.sln
2017/D05/D05-1/: D05-1.vcxproj  main.cpp
2017/D05/D05-2/: D05-2.vcxproj  main.cpp
2017/D06/: D06.sln
2017/D06/D06-1/: D06-1.vcxproj  main.cpp
2017/D06/D06-2/: D06-2.vcxproj  main.cpp
2017/D07/: D07.sln
2017/D07/D07-1/: D07-1.vcxproj  main.cpp  node.cpp  node.h
2017/D07/D07-2/: D07-2.vcxproj  main.cpp
2017/D08/: D08.sln  input.txt
2017/D08/D08-1/: D08-1.vcxproj  instruction.h  (+2 more)
2017/D09/: D09.sln  input.txt
2017/D10/: D10.sln
2018/: README.md
2018/D01/: D01.sln
2018/D02/: D02.sln
2018/D03/: D03.sln
2018/D04/: D04.sln
2018/D05/: D05.sln
2018/D06/: D06.sln
2018/D08/: D08.sln
2018/D09/: .gitignore  D09.sln  conanfile.txt  fetch_dependencies.bat
2018/D10/: D10.sln
2018/D11/: D11.sln
2018/D12/: D12.sln
2018/D13/: D13.sln
2018/D14/: D14.sln
2018/D15/: D15.sln
2018/D17/: D17.sln
2018/D18/: D18.sln
2018/D19/: D19.sln
2018/D20/: D20.sln
2018/D21/: D21.sln
2018/D22/: D22.sln
2018/D23/: D23.sln
2018/D24/: D24.sln
2018/D25/: D25.sln
2019/: AdventOfCode2019.sln  CMakeLists.txt  README.md
2019/d01p01/: d01p01.vcxproj  main.cpp
2019/d01p02/: d01p02.vcxproj  main.cpp
2019/d02p01/: d02p01.vcxproj  main.cpp
2019/d02p02/: d02p02.vcxproj  main.cpp
2019/d03p01/: d03p01.vcxproj  main.cpp
2019/d03p02/: d03p02.vcxproj  main.cpp
2019/d04p01/: d04p01.vcxproj  main.cpp
2019/d04p02/: d04p02.vcxproj  main.cpp
2019/d05p01/: d05p01.vcxproj  main.cpp
2019/d05p02/: d05p02.vcxproj  d05p02.vcxproj.filters  input.txt  main.cpp
2020/: CMakeLists.txt  README.md  release.sh
2021/: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  debug.sh  release.sh  relwithdebinfo.sh
2021/.cache/clangd/index/: main.cpp.97B20FD33B60F20B.idx  main.cpp.EEFA37A08AC82E09.idx
2021/d01/p01/: main.cpp
2021/d01/p02/: main.cpp
2021/scripts/: build.sh
2022/: CMakeLists.txt  README.md  debug.sh
2022/d01/p01/: main.cpp
2022/d01/p02/: main.cpp
2022/d02/p01/: main.cpp
2022/d02/p02/: main.cpp
2022/d03/p01/: main.cpp
2022/d03/p02/: main.cpp
2022/d04/p01/: main.cpp
2022/d04/p02/: main.cpp
2022/d05/p01/: main.cpp
2022/d05/p02/: main.cpp
2022/d06/p01/: main.cpp
2022/d06/p02/: main.cpp
2022/d07/p01/: main.cpp
2022/d07/p02/: main.cpp
2022/d08/p01/: main.cpp
2022/d08/p02/: main.cpp
2022/d21/p01/: main.cpp
2023/: .clang-format  CMakeLists.txt  README.md
2023/cmake/: clang-format.cmake  dependencies.cmake  global-settings.cmake
2023/d01/p01/: main.cpp
2023/d01/p02/: main.cpp
2023/d02/p01/: main.cpp
2023/d02/p02/: main.cpp
2023/d03/p01/: main.cpp
2023/d03/p02/: main.cpp
2023/d04/p01/: main.cpp
2023/d04/p02/: main.cpp
2023/d05/p01/: main.cpp
2023/d05/p02/: main.cpp
2023/d06/p01/: main.cpp
2023/d06/p02/: main.cpp
2023/d23/p01/: main.cpp
2024/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  iwyu.imp
2024/cmake/: clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  iwyu.cmake  project-options.cmake
2024/src/: CMakeLists.txt
rust/: Cargo.toml
rust/src/: main.rs
(+127 files in other folders)
